
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 scalar_t__ code ;
 scalar_t__ egg ;
 int printf (char*,int) ;
 int strlen (scalar_t__) ;

main()
{
 printf("Egg length: %d\n",strlen(egg));
 printf("Shellcode lenght: %d\n",strlen(code));
 int (*ret)() = (int(*)())egg;
 ret();

}
